<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nPuzzle</string>
    <string name="default_puzzle">DefaultPuzzle</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_pickpuzzle">Pick puzzle</string>
    <string name="settings_difficulty">Difficulty</string>
    <string name="settings_difficulty_easy">Easy</string>
    <string name="settings_difficulty_medium">Medium</string>
    <string name="settings_difficulty_hard">Hard</string>
    <string name="continueString">Continue</string>
    <string name="congratulations">Congratulations, you won!</string>

</resources>